# lorax

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  cloudbuild-core.yaml  cloudbuild-plugin.yaml  cloudbuild.yaml  contributing.md  data.text  entrypoint.sh  environment.yml  gunicorn_config.py  launch.py  lorax-url-map.yaml  package-lock.json  package.json  pg.ipynb  playwright.config.js  pyproject.toml  requirements.txt  tree_llm.ipynb  tree_llm.py
.github/workflows/: build.yml
agent/: README.md  api_navigator.py  environment.yml  python-api.md  rag_agent_loop.py  rag_agent_testing.py  requirements.txt  smart_loader_enhanced.py  url_loading_tester.py  vector_store.py
data/: documents.pkl
docker/: backend-startup.sh  entrypoint.sh  nginx.conf
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.cjs  vite.config.js  vitest.config.js
frontend/.claude/: ralph-loop.local.md
frontend/e2e/: landing-page.spec.js  viewer.spec.js
frontend/src/: App.css  App.jsx  App.test.jsx  ChatBot.jsx  ChatbotToggleButton.jsx  Deck.jsx  Lorax.jsx  LoraxViewer.jsx  Slider.jsx  Taxonium.jsx  globalconfig.js  main.jsx
frontend/src/components/: EditableRange.jsx  ErrorAlert.jsx  FileUploadInput.jsx  Info.jsx  Info.test.jsx  LandingPage.jsx  LandingPage.test.jsx  PositionSlider.jsx  Settings.jsx  Settings.test.jsx  TreeSequenceUploader.css  TreeSequenceUploader.jsx  ViewportOverlay.jsx  loraxMessage.jsx
frontend/src/constants/: index.js  timeouts.js  ui.js  validation.js  view.js
frontend/src/hooks/: useAnimatedBins.jsx  useBackend.jsx  useColor.jsx  useColorBy.jsx  useConfig.jsx  useView.jsx  (+12 more)
lorax/: __init__.py  __main__.py  buffer.py  callbacks.py  config.py  context.py  faiss_vector.py  gpt-test-rag.py  graph.py  handlers.py  handlers_postorder.py  interface.py  langgraph_tskit.py  lorax.py  lorax_app.py  manager.py  models.py  ollama-llama3.2-rag-test.py  ollamarag.py  ollamarag_hf.py  pg.ipynb  planner.py  prompts.py  react_agent.py  requirements.txt  streamlit-gpttestrag.py  streamlit-ollamarag.py  test.ipynb  tools.py  trees_to_taxonium.py  utils.py
lorax/chat/: faiss_vector.py  graph.py  langgraph_tskit.py  planner.py  tools.py
lorax/cloud/: gcs_utils.py
lorax/config/: constants.py  csv_loader.py  loader.py  tskit_loader.py
lorax/prompts/: code_generation.json  planner.json  react.txt  visualization.txt
lorax/react_from_scratch/: .gitignore
lorax/retriever/: chunker.py  create_documents.py
lorax/tree_graph/: __init__.py
lorax/tskit-vector/: index.pkl
lorax/tskit-vector-llama-api/: index.faiss  index.pkl
lorax/tskit-vector-ollama-new/: index.pkl
lorax/utils/: gcs_utils.py
lorax/viz/: trees_to_taxonium.py  utils.py
nginx/: nginx.conf
scripts/: README.md  backend-startup.sh  create_zenodo_archive.sh  csv_formatting.py  simulate_trees.py  test_create_zenodo_archive.sh
server/taxonium_backend/: PythonWebSocketClient.js  package.json  server.js
server/taxonium_data_handling/: filtering.js  importing.js
src/: README.md  app.py  faiss_vector.py  graph.py  langgraph_tskit.py  langgraph_tskit_hitl_basic.py  langgraph_tskit_hitl_feedback.py  requirements.txt  test.ipynb  tools.py  utils.py
streamer/: pg.ipynb  trees_streamer.py  trees_to_taxonium.py  utils.py
taxonium_component/: package.json  vite.config.js
taxonium_component/src/: App.jsx  ChatBot.jsx  Chatbot.css  Deck.jsx  TabContainer.css  Taxonium.jsx  jstree.js
test/: lorax-test.py
treeseq-viz/: README.md
tskit-vector/: index.faiss  index.pkl
website/webapp/: package-lock.json  package.json
(+105 files in other folders)
