[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorax-arg"
version = "0.1.3"
description = "Interactive ARG visualization for genomics"
readme = "packages/app/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lorax Team"}]
keywords = [
  "lorax",
  "arg",
  "ancestral recombination graph",
  "tree sequence",
  "visualization",
  "genomics",
  "evolution",
  "phylogenetics",
  "bioinformatics",
]
urls = {
  Homepage = "https://lorax.in",
  Documentation = "https://lorax.in",
  Source = "https://github.com/pratikkatte/lorax",
  Issues = "https://github.com/pratikkatte/lorax/issues",
}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Environment :: Console",
]

dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "python-socketio>=5.0.0",
  "python-dotenv>=1.0.0",
  "click>=8.0.0",
  "aiofiles>=24.0.0",
  "aiohttp>=3.0.0",
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "pyarrow>=18.0.0",
  "tskit>=1.0.0",
  "tszip>=0.2.0",
  "redis>=5.0.0",
  "google-cloud-storage>=3.0.0",
  "starlette>=0.40.0",
  "psutil>=5.0.0",
  "ete3>=3.1.0",
  "numba>0.57.1",
  "python-multipart>=0.0.10",
]

[project.optional-dependencies]
prod = [
  "gunicorn>=23.0.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.24.0",
  "locust>=2.15.0",
  "python-socketio[client]>=5.0.0",
  "msprime>=1.2.0",
]

[project.scripts]
lorax = "lorax_app.cli:main"
lorax-arg = "lorax_app.cli:main"
lorax-backend = "lorax.cli:main"

[tool.setuptools.packages.find]
where = ["packages/app", "packages/backend"]
include = ["lorax_app*", "lorax*"]

[tool.setuptools.package-data]
lorax_app = [
  "static/**/*",
  "static/*",
]
lorax = ["*.json", "*.yaml", "*.yml"]
